--- a/tenants/base/dev-team/sync.yaml
+++ b/tenants/base/dev-team/sync.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   interval: 1m
   url: https://github.com/mecsys/mecsys-dev-team
+  ref:
+    branch: main
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
