Install ingress-nginx controller.

--- a/clusters/mecsys/infrastructure.yaml
+++ b/clusters/mecsys/infrastructure.yaml
@@ -29,3 +29,19 @@ spec:
   serviceAccountName: kustomize-controller
   path: ./infrastructure/kyverno-policies
   prune: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: ingress-nginx
+  namespace: flux-system
+spec:
+  interval: 10m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  serviceAccountName: kustomize-controller
+  path: ./infrastructure/ingress-nginx
+  prune: true
+  wait: true
+  timeout: 5m
