--- a/infrastructure/ingress-nginx/sync.yaml
+++ b/infrastructure/ingress-nginx/sync.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: nginx-ingress
-  namespace: nginx-ingress
+  name: ingress-nginx
+  namespace: ingress-nginx
 spec:
   interval: 5m
   url: https://kubernetes.github.io/ingress-nginx
@@ -10,10 +10,10 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: nginx-ingress
+  name: ingress-nginx
   namespace: ingress-nginx
 spec:
-  releaseName: nginx-ingress
+  releaseName: ingress-nginx
   serviceAccountName: ingress-nginx
   chart:
     spec:
