--- a/infrastructure/ingress-nginx/rbac.yaml
+++ b/infrastructure/ingress-nginx/rbac.yaml
@@ -6,28 +6,28 @@ metadata:
     app: ingress-nginx
   name: ingress-nginx
 
-# ---
-# apiVersion: v1
-# kind: ServiceAccount
-# metadata:
-#   labels:
-#     app: ingress-nginx
-#   name: ingress-nginx
-#   namespace: ingress-nginx
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels:
+    app: ingress-nginx
+  name: ingress-nginx
+  namespace: ingress-nginx
 
-# ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: RoleBinding
-# metadata:
-#   labels:
-#     app: ingress-nginx
-#   name: ingress-nginx
-#   namespace: ingress-nginx
-# roleRef:
-#   apiGroup: rbac.authorization.k8s.io
-#   kind: ClusterRole
-#   name: cluster-admin
-# subjects:
-# - kind: ServiceAccount
-#   name: ingress-nginx
-#   namespace: ingress-nginx
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  labels:
+    app: ingress-nginx
+  name: ingress-nginx
+  namespace: ingress-nginx
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: ingress-nginx
+  namespace: ingress-nginx
